Fix the Map appearance on mobilescreen, scrollable cities list

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -5,8 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(300vh - 4.8rem);
   height: auto;
+  overflow-y: auto;
 }
 
 .sidebar a {
